sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ';' expected but '<-' found.
    i<-0; 
     ^